fixed advanced search alignment

--- a/search/styles.css
+++ b/search/styles.css
@@ -6,16 +6,6 @@ body {
     background-color: white; 
 }
 
-label {
-    display: flex; 
-    flex-direction: row;
-    justify-content: flex-end;
-    text-align: right;
-    width: 400px;
-    line-height: 26px;
-    margin-bottom: 10px;
-}
-
 .navbar {
     list-style-type: none; 
     margin: 0;
@@ -71,12 +61,6 @@ li a:hover {
     width: 100%;
 } 
 
-.field {
-    display: table-cell; 
-    vertical-align: middle; 
-    height: 40px;
-}
-
 .textinput {
     height: 20px;
     flex: 0 0 200px;
@@ -91,3 +75,28 @@ li a:hover {
     background-color: blue;
 }
 
+label {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    text-align: right; 
+    width: 500px;
+    line-height: 26px;
+    margin-bottom: 10px;
+}
+
+input {
+    height: 20px;
+    flex: 0 0 200px;
+    margin-left: 10px;
+}
+
+#avsub {
+    width: 500px; 
+    overflow: hidden; 
+}
+
+input.right {
+    float: right;
+    margin-right: 1%;
+}
